--- a/elastic-runtime/pom.xml
+++ b/elastic-runtime/pom.xml
@@ -41,11 +41,10 @@
   <plugins>
      <plugin>
          <artifactId>maven-assembly-plugin</artifactId>
-         <version>2.2</version>
          <configuration>
              <archive>
                  <manifest>
-                     <mainClass>com.vmware.vhadoop.real.vhm.MainController</mainClass>
+                     <mainClass>com.vmware.vhadoop.vhm.MainController</mainClass>
                  </manifest>
              </archive>
              <descriptorRefs>
