--- a/elastic-runtime/pom.xml
+++ b/elastic-runtime/pom.xml
@@ -36,6 +36,12 @@
       <artifactId>amqp-client</artifactId>
       <version>2.8.5</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.2.2</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
   <build>
   <plugins>
