--- a/elastic-runtime/pom.xml
+++ b/elastic-runtime/pom.xml
@@ -42,6 +42,11 @@
       <version>2.2.2</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.1</version>
+    </dependency>
   </dependencies>
   <build>
   <plugins>
