--- a/elastic-runtime/src/main/resources/vhm.properties
+++ b/elastic-runtime/src/main/resources/vhm.properties
@@ -1,8 +1,8 @@
-vCenterId=10.141.7.65
-vCenterUser=Administrator
-vCenterPwd=ca$hc0w
-vHadoopUser=hduser
-vHadoopPwd=had00p
+vCenterId=1.2.3.4
+vCenterUser=user
+vCenterPwd=password
+vHadoopUser=user
+vHadoopPwd=password
 vHadoopHome=/usr/local/hadoop/hadoop-0.20.203.0
 vHadoopExcludeTTFile=/usr/local/hadoop/hadoop-0.20.203.0/conf/excludeTTs
 exchangeName=bdd.runtime
