Authenticate to VC using certificate vs. user/password

--- a/elastic-runtime/src/main/resources/vhm.properties
+++ b/elastic-runtime/src/main/resources/vhm.properties
@@ -1,6 +1,8 @@
 vCenterId=1.2.3.4
 vCenterUser=user
 vCenterPwd=password
+keyStorePath=/tmp/keyStore
+keyStorePwd=password
 vHadoopUser=user
 vHadoopPwd=password
 vHadoopHome=/usr/local/hadoop/hadoop-0.20.203.0
