--- a/elastic-runtime/pom.xml
+++ b/elastic-runtime/pom.xml
@@ -43,9 +43,9 @@
       <version>2.1</version>
     </dependency>
     <dependency>
-      <groupId>org.testng</groupId>
-      <artifactId>testng</artifactId>
-      <version>6.3.1</version>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.8.1</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
