--- a/elastic-runtime2/pom.xml
+++ b/elastic-runtime2/pom.xml
@@ -46,6 +46,17 @@
       <artifactId>reflectVmodl</artifactId>
       <version>1.0.8</version>
     </dependency>
+    <dependency>
+      <groupId>com.rabbitmq</groupId>
+      <artifactId>amqp-client</artifactId>
+      <version>2.8.5</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.2.2</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
   <build>
