--- a/elastic-runtime2/pom.xml
+++ b/elastic-runtime2/pom.xml
@@ -57,6 +57,11 @@
       <version>2.2.2</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-math</artifactId>
+      <version>2.2</version>
+    </dependency>
   </dependencies>
 
   <build>
