Renamed MainController to BootstrapMain

--- a/elastic-runtime2/pom.xml
+++ b/elastic-runtime2/pom.xml
@@ -71,7 +71,7 @@
          <configuration>
              <archive>
                  <manifest>
-                     <mainClass>com.vmware.vhadoop.vhm.MainController</mainClass>
+                     <mainClass>com.vmware.vhadoop.vhm.BootstrapMain</mainClass>
                  </manifest>
              </archive>
              <descriptorRefs>
