--- a/elastic-runtime2/pom.xml
+++ b/elastic-runtime2/pom.xml
@@ -22,6 +22,11 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>com.jcraft</groupId>
+      <artifactId>jsch</artifactId>
+      <version>0.1.48</version>
+    </dependency>
+    <dependency>
       <groupId>com.vmware.aurora</groupId>
       <artifactId>vlsiCore</artifactId>
       <version>1.0.8</version>
@@ -61,6 +66,11 @@
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-math</artifactId>
       <version>2.2</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.1</version>
     </dependency>
   </dependencies>
 
