--- a/elastic-runtime2/src/main/resources/vhm.properties
+++ b/elastic-runtime2/src/main/resources/vhm.properties
@@ -1,14 +1,17 @@
+uuid=xxx
 vCenterId=1.2.3.4
-vCenterUser=user
-vCenterPwd=password
+keyStorePath=/tmp/keyStore
+keyStorePwd=password
+extensionKey=com.vmware.vhm
+#vCenterUser=user
+#vCenterPwd=password
 vHadoopUser=user
-vHadoopPwd=password
+#vHadoopPwd=password
 vHadoopHome=/usr/local/hadoop/hadoop-0.20.203.0
 vHadoopExcludeTTFile=/usr/local/hadoop/hadoop-0.20.203.0/conf/excludeTTs
+vHadoopPrvkeyFile=aFile
 exchangeName=bdd.runtime
 msgHostName=localhost
 routeKeyCommand=command
 routeKeyStatus=status
-vSphereCluster=vsc
-uuid=1234
 vCenterThumbprint=xx:xx:xx:xx:xx:xx:xx:xx:xx:xx:xx:xx:xx:xx:xx:xx:xx:xx:xx:xx
