--- a/elastic-runtime2/pom.xml
+++ b/elastic-runtime2/pom.xml
@@ -163,6 +163,16 @@
 					<mainClass>com.vmware.em4jharness.Harness</mainClass>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<excludes>
+						<exclude>**/VlsiTest.java</exclude>
+						<exclude>**/ClusterMapTest.java</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
