--- a/elastic-runtime2/pom.xml
+++ b/elastic-runtime2/pom.xml
@@ -169,7 +169,7 @@
 				<configuration>
 					<excludes>
 						<exclude>**/VlsiTest.java</exclude>
-						<exclude>**/ClusterMapTest.java</exclude>
+						<exclude>**/PopulateClusterMap.java</exclude>
 					</excludes>
 				</configuration>
 			</plugin>
