--- a/elastic-runtime2/pom.xml
+++ b/elastic-runtime2/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.vmware.vhadoop.elastic-runtime2</groupId>
 	<artifactId>elastic-runtime2</artifactId>
-	<version>0.1</version>
+	<version>0.1-model</version>
 
 	<repositories>
 		<repository>
@@ -20,11 +20,17 @@
 	</properties>
 
 	<dependencies>
+	   <dependency>
+	      <groupId>com.vmware.vhadoop.vhm.model</groupId>
+         <artifactId>Model</artifactId>
+         <version>0.1</version>
+         <scope>test</scope>
+	   </dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.11</version>
-      		<scope>test</scope>
+     		<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.jcraft</groupId>
