--- a/elastic-runtime2/pom.xml
+++ b/elastic-runtime2/pom.xml
@@ -20,11 +20,17 @@
 	</properties>
 
 	<dependencies>
+	   <dependency>
+	      <groupId>com.vmware.vhadoop.vhm.model</groupId>
+         <artifactId>Model</artifactId>
+         <version>0.1</version>
+         <scope>test</scope>
+	   </dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.11</version>
-      		<scope>test</scope>
+     		<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.jcraft</groupId>
@@ -165,6 +171,7 @@
 					<excludes>
 						<exclude>**/VlsiTest.java</exclude>
 						<exclude>**/PopulateClusterMap.java</exclude>
+<!-- 						<exclude>**/VHMIntegrationTest.java</exclude> -->
 					</excludes>
 				</configuration>
 			</plugin>
