Updates logging behaviour. logging.properties is now the definitive config if it can be found. Internal defaults are only applied if logging.properties isn't available. http://bugzilla.eng.vmware.com/show_bug.cgi?id=1065991

--- a/elastic-runtime2/src/main/resources/logging.properties
+++ b/elastic-runtime2/src/main/resources/logging.properties
@@ -1,15 +1,30 @@
 #Loggers and Handlers can override this logging level
 .level=INFO
-# Set the default logging level for new ConsoleHandler instances
-java.util.logging.ConsoleHandler.level=FINE
-# Set the default logging level for new FileHandler instances
-java.util.logging.FileHandler.level=FINEST
-# Set the handlers we want configured by default
-handlers=java.util.logging.ConsoleHandler
-# Set a root handler - necessary to be able to specify non-root handlers
-.handlers=java.util.logging.ConsoleHandler
 
-# Set the levels for specific packages 
+# Set the default logging level for new handler instances
+java.util.logging.ConsoleHandler.level=INFO
+java.util.logging.FileHandler.level=FINEST
+
+# Set up the handlers to use the VHM formatter which provides mappings from numeric to textual IDs
+java.util.logging.ConsoleHandler.formatter=com.vmware.vhadoop.util.LogFormatter
+java.util.logging.FileHandler.formatter=com.vmware.vhadoop.util.LogFormatter
+
+# Set the handlers we want configured by default
+handlers=java.util.logging.ConsoleHandler,java.util.logging.FileHandler
+# Set a root handler - necessary to be able to specify non-root handlers
+.handlers=java.util.logging.ConsoleHandler,java.util.logging.FileHandler
+
+# Configure the log file and rotation behaviour
+# Append to log files if they already exist
+java.util.logging.FileHandler.append=true
+# Set the default log file size limit for new FileHandler instances
+java.util.logging.FileHandler.limit=10485760
+# Set the default number of log files in the rotation for new FileHandler instances
+java.util.logging.FileHandler.count=5
+# The file that we want to log to
+java.util.logging.FileHandler.pattern=/opt/serengeti/logs/vhm_detail.log
+
+# Set the logging levels for specific packages
 com.vmware.vim.level=WARNING
-com.vmware.vhadoop.level=INFO
 org.springframework.level=WARNING
+com.vmware.vhadoop.level=INFO
