Makes LogFormatter more concise and adds DecoratedLogFormatter for logging to file.
http://bugzilla.eng.vmware.com/show_bug.cgi?id=1065124

--- a/elastic-runtime2/src/main/resources/logging.properties
+++ b/elastic-runtime2/src/main/resources/logging.properties
@@ -7,7 +7,7 @@ java.util.logging.FileHandler.level=FINEST
 
 # Set up the handlers to use the VHM formatter which provides mappings from numeric to textual IDs
 java.util.logging.ConsoleHandler.formatter=com.vmware.vhadoop.util.LogFormatter
-java.util.logging.FileHandler.formatter=com.vmware.vhadoop.util.LogFormatter
+java.util.logging.FileHandler.formatter=com.vmware.vhadoop.util.DecoratedLogFormatter
 
 # Set the handlers we want configured by default
 handlers=java.util.logging.ConsoleHandler,java.util.logging.FileHandler
