Updates the default logging configuration to only emit USER level and above logging to the console handler (routed to vhm.log) http://bugzilla.eng.vmware.com/show_bug.cgi?id=1065124

--- a/elastic-runtime2/src/main/resources/logging.properties
+++ b/elastic-runtime2/src/main/resources/logging.properties
@@ -2,7 +2,7 @@
 .level=INFO
 
 # Set the default logging level for new handler instances
-java.util.logging.ConsoleHandler.level=INFO
+java.util.logging.ConsoleHandler.level=USER
 java.util.logging.FileHandler.level=FINEST
 
 # Set up the handlers to use the VHM formatter which provides mappings from numeric to textual IDs
