--- a/elastic-runtime2/pom.xml
+++ b/elastic-runtime2/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.vmware.vhadoop.elastic-runtime2</groupId>
 	<artifactId>elastic-runtime2</artifactId>
-	<version>0.1</version>
+	<version>0.1-m7refactor</version>
 
 	<repositories>
 		<repository>
