--- a/elastic-runtime2/.project
+++ b/elastic-runtime2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>elastic-runtime2</name>
+	<name>elastic-runtime2-m7</name>
 	<comment></comment>
 	<projects>
 	</projects>
