TA42643: adds comments to the externalized_parameters and minor correction of logging

--- a/elastic-runtime2/src/main/resources/externalized_parameters.properties
+++ b/elastic-runtime2/src/main/resources/externalized_parameters.properties
@@ -4,57 +4,79 @@
 #######################################
 # VC connection - control VC interaction
 #######################################
+# Timeout during connection of VC control client. Milliseconds. 
 VC_CONTROL_CONNECTION_TIMEOUT_MILLIS = 120000
+# Timeout during connection of VC update client. Milliseconds.
 VC_WAIT_FOR_UPDATES_CONNECTION_TIMEOUT_MILLIS = 120000
+# Timeout during connection of VC stats sampling client. Milliseconds.
 VC_STATS_POLL_CONNECTION_TIMEOUT_MILLIS = 5000
+# The interval to sleep in between looking for clusters for VHM to manage. Milliseconds.
 SLEEP_RETRY_LOOKING_FOR_VALID_CLUSTERS = 5000
+# Timeout passed to the property collector when waiting for changes. Seconds.
 VC_PROPERTY_COLLECTOR_TIMEOUT = 300
 
 
 #######################################
 # Ssh Connection Properties
 #######################################
+# Number of immediate retry attempts when attempting to open an ssh connection.
 SSH_INITIAL_CONNECTION_NUMBER_OF_RETRIES = 2
+# Time to wait between retry attempts. Millis.
 SSH_INITIAL_CONNECTION_RETRY_DELAY_MILLIS = 5000
+# Connection timeout for established ssh connections
 SSH_REMOTE_EXECUTION_TIMEOUT_MILLIS = 100000
-   
+
+
 #######################################
 # Hadoop job tracker interaction
 #######################################
+# The port on which to establish a connection to jobtrackers.
 JOB_TRACKER_DEFAULT_SSH_PORT = 22
+# The permissions to assign files copied to jobtrackers that will be read.
 JOB_TRACKER_SCP_READ_PERMS = 644
+# The permissions to assign files copied to jobtrackers that will be executed.
 JOB_TRACKER_SCP_EXECUTE_PERMS = 755
+# The number of established ssh connections to leave open and cache for reuse.
 JOB_TRACKER_SSH_CONNECTION_CACHE_SIZE = 20
 
-JOB_TRACKER_DECOM_LIST_FILE_NAME = dlist.txt
-JOB_TRACKER_DECOM_SCRIPT_FILE_NAME = decommissionTTs.sh
-JOB_TRACKER_RECOM_LIST_FILE_NAME = rlist.txt
-JOB_TRACKER_RECOM_SCRIPT_FILE_NAME = recommissionTTs.sh
-JOB_TRACKER_CHECK_SCRIPT_FILE_NAME = checkTargetTTsSuccess.sh
-
-JOB_TRACKER_DEFAULT_SCRIPT_SRC_PATH = src/main/resources/
+# The path on jobtrackers to which scripts and files will be copied. 
 JOB_TRACKER_DEFAULT_SCRIPT_DEST_PATH = /tmp/
-
+# The name of the file to use remotely that contains the list of task trackers to be decommissioned.
+JOB_TRACKER_DECOM_LIST_FILE_NAME = dlist.txt
+# The name of the file to use remotely for the decommision script
+JOB_TRACKER_DECOM_SCRIPT_FILE_NAME = decommissionTTs.sh
+# The name of the file to use remotely that contains the list of task trackers to be recommissioned.
+JOB_TRACKER_RECOM_LIST_FILE_NAME = rlist.txt
+# The name of the file to use remotely for the recommision script
+JOB_TRACKER_RECOM_SCRIPT_FILE_NAME = recommissionTTs.sh
+# The name of the file to use remotely for the script that checks that active task trackers matches expectations
+JOB_TRACKER_CHECK_SCRIPT_FILE_NAME = checkTargetTTsSuccess.sh
+# Number of times to retry the check script when recommissioning/decommissioning task trackers before delcaring a problem
 ACTIVE_TASK_TRACKERS_CHECK_RETRY_ITERATIONS = 4
 
    
 #######################################
 # RabbitMQ 
 #######################################
+# Delay in milliseconds to wait for the rabbit mq connection to shutdown cleanly 
 RABBITMQ_CONNECTION_SHUTDOWN_TIMEOUT_MILLIS = 5000
-   
+
    
 #######################################
 # Task tracker commission/decommission
 #######################################
+# The maximum amount of time to wait for a task tracker VM to publish its hostname via vCenter extrInfo in milliseconds.
 MAX_DNS_WAIT_TIME_MILLIS = 180000
+# The sleep interval in between checking for the publishing of a hostname
 MAX_DNS_WAIT_SLEEP_TIME_MILLIS = 5000
-   
-   
+
+
 #######################################
 # VHM control variables
 #######################################
+# Pending scale operations for a cluster with incomplete information will be dumped after this timeout expires if it remains incomplete. Milliseconds.
 CLUSTER_COMPLETENESS_GRACE_TIME_MILLIS = 10000
+# The amount of time permitted for event producers to restart in the case of an internal error. If not started within this time, VHM will exit. Milliseconds.
 EVENT_PRODUCER_START_GRACE_TIME_MILLIS = 5000
+# The amount of time permitted for event producers to stop cleanly. If this is as part of an internal reset VHM will exit if this expires. Milliseconds.
 EVENT_PRODUCER_STOP_GRACE_TIME_MILLIS = 5000
-   
