1139772: externalizes all of the control constants so they're available for override if needed

--- a/elastic-runtime2/src/main/resources/externalized_parameters.properties
+++ b/elastic-runtime2/src/main/resources/externalized_parameters.properties
@@ -27,6 +27,14 @@ SSH_INITIAL_CONNECTION_NUMBER_OF_RETRIES = 2
 SSH_INITIAL_CONNECTION_RETRY_DELAY_MILLIS = 5000
 # Connection timeout for established ssh connections
 SSH_REMOTE_EXECUTION_TIMEOUT_MILLIS = 100000
+# Session read timeout in milliseconds. The amount of time to wait for an expected response.
+SSH_SESSION_READ_TIMEOUT = 15000
+# Number of dropped keep alive packets for the session is disconnected
+SSH_DROPPED_KEEP_ALIVE_GRACE = 3
+# The delay interval between checking for remote process exit when calling waitFor on RemoteProcess
+SSH_REMOTE_PROC_WAIT_FOR_DELAY = 100
+# Sets whether to use strict host key checking for connections to the job tracker
+SSH_STRICT_HOST_KEY_CHECKING = no
 
 
 #######################################
