1139875: updates alarm name prefix to match the one used by serengeti

--- a/elastic-runtime2/src/main/resources/externalized_parameters.properties
+++ b/elastic-runtime2/src/main/resources/externalized_parameters.properties
@@ -15,7 +15,7 @@ SLEEP_RETRY_LOOKING_FOR_VALID_CLUSTERS = 5000
 # Timeout passed to the property collector when waiting for changes. Seconds.
 VC_PROPERTY_COLLECTOR_TIMEOUT = 300
 # The name of the alarm created on the vApp folder for health issues with compute VMs
-VC_ALARM_NAME_BASE = Big Data Extensions - compute VM health
+VC_ALARM_NAME_BASE = BDE Health 
 
 
 #######################################
