1141429: Ensure that in the case of duplicated DNS names from Hadoop that a min retry millis is ensured

--- a/elastic-runtime2/src/main/resources/externalized_parameters.properties
+++ b/elastic-runtime2/src/main/resources/externalized_parameters.properties
@@ -61,7 +61,9 @@ JOB_TRACKER_RECOM_LIST_FILE_NAME = rlist.txt
 JOB_TRACKER_RECOM_SCRIPT_FILE_NAME = recommissionTTs.sh
 # The name of the file to use remotely for the script that checks that active task trackers matches expectations
 JOB_TRACKER_CHECK_SCRIPT_FILE_NAME = checkTargetTTsSuccess.sh
-# Number of times to retry the check script when recommissioning/decommissioning task trackers before delcaring a problem
+# The minimum wait time in milliseconds between retry invocations of the check script
+JOB_TRACKER_CHECK_SCRIPT_MIN_RETRY_MILLIS = 15000
+# Number of times to retry the check script when recommissioning/decommissioning task trackers before declaring a problem
 ACTIVE_TASK_TRACKERS_CHECK_RETRY_ITERATIONS = 4
 
    
